# palantir-media-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app_settings_example.json  build-linux.sh  build-windows.bat  build-windows.ps1
.github/workflows/: api.yml  validate.yaml
client/: .eslintrc  .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: index.css  main.tsx  vite-env.d.ts
client/src/components/: MediaList.tsx  Navbar.tsx
client/src/components/Loader/: Loader.module.css  index.tsx
client/src/components/MediaList/: EmptyList.module.css  EmptyList.tsx  TreeNode.module.css  TreeNode.tsx  helpers.ts  index.tsx
client/src/components/Navbar/: Navbar.module.css  index.tsx
client/src/components/VideoPlayer/: index.tsx
client/src/layouts/: AppLayout.tsx
client/src/pages/: HomePage.tsx  MediaPage.tsx
routes_tests/media/: valid_request.http
routes_tests/settings/: invalid_post_request.http  invalid_request.http  valid_get_request.http  valid_post_request.http  valid_request.http
src/: directory_scanner.rs  main.rs  routes.rs  settings.rs
src/app_settings/: mod.rs  model.rs  routes.rs  tests.rs  utils.rs
src/gui/: messages.rs  mod.rs  state.rs  views.rs
src/media_scanner/: routes.rs  tests.rs  utils.rs
src/media_server/: routes.rs  utils.rs
src/react_app/: mod.rs  routes.rs
src/server/: mod.rs
src/server/app_settings/: model.rs  routes.rs  tests.rs
src/server/media_scanner/: mod.rs  routes.rs  tests.rs  utils.rs
src/server/media_server/: mod.rs  routes.rs  utils.rs
(+4 files in other folders)
