[package]
name = "palantir-media-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4"
iced = "0.10.0"
lazy_static = "1.4.0"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
